--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>MascotaMania</title>
 </head>
 <body>
+
   <!-- Navbar -->
   <div id="nav" class="container-fluid sticky-top navbar-light">
     <div class="row">
@@ -30,27 +31,36 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse row" id="navbarSupportedContent" style="justify-content: space-between;">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown col-3" style="text-align: center;">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Mascotas
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Perros</a></li>
-                <li><a class="dropdown-item" href="#">Gastos</a></li>
-                <li><a class="dropdown-item" href="#">Roedores</a></li>
-                <li><a class="dropdown-item" href="#">Aves</a></li>
-                <li><a class="dropdown-item" href="#">Peces</a></li>
+                <li><a id="menu" class="dropdown-item" href="#">Perros</a></li>
+                <li><a id="menu" class="dropdown-item" href="#">Gastos</a></li>
+                <li><a id="menu" class="dropdown-item" href="#">Roedores</a></li>
+                <li><a id="menu" class="dropdown-item" href="#">Aves</a></li>
+                <li><a id="menu" class="dropdown-item" href="#">Peces</a></li>
               </ul>
             </li>
-            <li class="nav-item">
+            <li class="nav-item col-3" style="text-align: center;">
               <a class="nav-link" href="#">Marcas</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Servicios</a>
+            <li class="nav-item dropdown col-3" style="text-align: center;">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Servicios
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a id="menu" class="dropdown-item" href="#">Veterinaria</a></li>
+                <li><a id="menu" class="dropdown-item" href="#">Peluqueria</a></li>
+                <li><a id="menu" class="dropdown-item" href="#">Farmacia</a></li>
+                <li><a id="menu" class="dropdown-item" href="#">Análisis Clínicos</a></li>
+                <li><a id="menu" class="dropdown-item" href="#">Cirugias</a></li>
+              </ul>
             </li>
-            <li class="nav-item">
+            <li class="nav-item col-3" style="text-align: center;">
               <a class="nav-link" href="#">Contacto</a>
             </li>
           </ul>
@@ -91,24 +101,68 @@
 
   <!-- Marcas -->
   <div id="marcas">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
+    <h1>Marcas</h1>
+    <div class="container-fluid">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
+          </div>
         </div>
       </div>
     </div>
