--- a/index.html
+++ b/index.html
@@ -14,86 +14,89 @@
 <body>
 
   <!-- Navbar -->
-  <div id="nav" class="container-fluid sticky-top navbar-light">
-    <div class="row">
-      <div class="col">
-        <a class="navbar-brand" href="#"><img src="img/LogoMascotaManía Blanco.png" style="width:200px;height:77px;" alt=""></a>
-      </div>
-      <div class="col-sm-8">
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse row" id="navbarSupportedContent" style="justify-content: space-between;">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown col-3" style="text-align: center;">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Mascotas
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a id="menu" class="dropdown-item" href="#">Perros</a></li>
-                <li><a id="menu" class="dropdown-item" href="#">Gastos</a></li>
-                <li><a id="menu" class="dropdown-item" href="#">Roedores</a></li>
-                <li><a id="menu" class="dropdown-item" href="#">Aves</a></li>
-                <li><a id="menu" class="dropdown-item" href="#">Peces</a></li>
-              </ul>
-            </li>
-            <li class="nav-item col-3" style="text-align: center;">
-              <a class="nav-link" href="#">Marcas</a>
-            </li>
-            <li class="nav-item dropdown col-3" style="text-align: center;">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Servicios
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a id="menu" class="dropdown-item" href="#">Veterinaria</a></li>
-                <li><a id="menu" class="dropdown-item" href="#">Peluqueria</a></li>
-                <li><a id="menu" class="dropdown-item" href="#">Farmacia</a></li>
-                <li><a id="menu" class="dropdown-item" href="#">Análisis Clínicos</a></li>
-                <li><a id="menu" class="dropdown-item" href="#">Cirugias</a></li>
-              </ul>
-            </li>
-            <li class="nav-item col-3" style="text-align: center;">
-              <a class="nav-link" href="#">Contacto</a>
-            </li>
-          </ul>
+  <div id="nav" class="sticky-top" style="padding-top: 10px;">
+    <div class="container-fluid navbar-light">
+      <div class="row">
+        <div class="col">
+          <a class="navbar-brand" href="#"><img src="img/LogoMascotaManía Blanco.png" style="width:200px;height:77px;" alt=""></a>
         </div>
-      </div> 
-    </nav>
+        <div class="col-sm-8">
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse row" id="navbarSupportedContent" style="justify-content: space-between;">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown col-3" style="text-align: center;">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Mascotas
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a id="menu" class="dropdown-item" href="#">Perros</a></li>
+                  <li><a id="menu" class="dropdown-item" href="#">Gastos</a></li>
+                  <li><a id="menu" class="dropdown-item" href="#">Roedores</a></li>
+                  <li><a id="menu" class="dropdown-item" href="#">Aves</a></li>
+                  <li><a id="menu" class="dropdown-item" href="#">Peces</a></li>
+                </ul>
+              </li>
+              <li class="nav-item col-3" style="text-align: center;">
+                <a class="nav-link" href="#">Marcas</a>
+              </li>
+              <li class="nav-item dropdown col-3" style="text-align: center;">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Servicios
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a id="menu" class="dropdown-item" href="#">Veterinaria</a></li>
+                  <li><a id="menu" class="dropdown-item" href="#">Peluqueria</a></li>
+                  <li><a id="menu" class="dropdown-item" href="#">Farmacia</a></li>
+                  <li><a id="menu" class="dropdown-item" href="#">Análisis Clínicos</a></li>
+                  <li><a id="menu" class="dropdown-item" href="#">Cirugias</a></li>
+                </ul>
+              </li>
+              <li class="nav-item col-3" style="text-align: center;">
+                <a class="nav-link" href="#">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div> 
+      </nav>
+    </div>
+  </div>
+  <div id="nav" style="height:120px;">
+    <div id="imgnav"style="height:180px;"></div>  
   </div>
 
   <!-- Cards -->
-  <div id="cards">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div id="card">
-            <p id="card">Veterinaria</p>
-          </div>
+  <div id="cards" class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card">
+        <img src="img/veterinaria.jpg" class="card-img-top" alt="...">
+        <div id="card">
+          <p id="card">Veterinaria</p>
         </div>
       </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div id="card">
-            <p id="card">PetShop</p>
-          </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="img/petshop.jpg" class="card-img-top" alt="...">
+        <div id="card">
+          <p id="card">PetShop</p>
         </div>
       </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div id="card">
-            <p id="card">Peluquería</p>
-          </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="img/peluqueria.jpg" class="card-img-top" alt="...">
+        <div id="card">
+          <p id="card">Peluquería</p>
         </div>
       </div>
     </div>
@@ -102,67 +105,95 @@
   <!-- Marcas -->
   <div id="marcas">
     <h1>Marcas</h1>
-    <div class="container-fluid">
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+    <div class="row row-cols-2 row-cols-md-6 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/royal.png" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/purina.png" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/Eukanuba.png" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/nature.png" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/nutrique.png" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/monami.jfif" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/iams.png" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/gepsa.png" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/uniq.png" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/tcg.png" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/oldprince.png" class="card-img-top" alt="...">
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" style="width:260px;height:260px;"alt="...">
-          </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/krof.png" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/optimum.png" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/ferplast.png" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/golocan.png" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/drzoo.png" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/animalpet.png" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/marcas/per-ros.png" class="card-img-top" alt="...">
         </div>
       </div>
     </div>
