--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </div>
 
   <!-- Marcas -->
-  <div id="marcas">
+  <div id="rosa">
     <h1>Marcas</h1>
     <div class="row row-cols-2 row-cols-md-6 g-4">
       <div class="col">
@@ -200,15 +200,59 @@
   </div>
 
   <!-- Nosotros -->
+  <div id="blanco">
+    <h1>Sobre Nosotros</h1>
+    <img src="img/Nosotros.jpeg" alt="" id="nosotros"/>
+    <p id="nosotros">Somos un PetShop con más de 20 años de experiencia.
+      Desde el inicio, buscamos ofrecerle a nuestros clientes una amplia variedad de productos, contando con los alimentos y accesorios de las mejores marcas y una farmacia destacada.
+      Además, brindamos servicios de peluquería y veterinaria, incluyendo clínica veterinaria, análisis clínicos, aplicación de chips, cirugías, ecografías y electrocardiogramas programados. 
+      ¡Gracias a nuestros clientes de todos estos años por acompañarnos!
+      ¡Te esperamos en Mascotamania Alsina!
+      </p>
+  </div>
 
   <!-- Mapa -->
+  <div id="rosa" class="mapa">
+    <div id="mapa">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3289.217446074392!2d-58.517987685539076!3d-34.47200765804639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb036b8093c1b%3A0x8d0ed60aa8a25fa6!2sAlsina%2041%2C%20B1642FNA%20San%20Isidro%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1644338983190!5m2!1ses!2sar" style="border:0; align-content: center; display: block; padding: 0 15px;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+    <div id="datos" class="container-fluid">
+      <h1>Visitanos</h1>
+      <h5 style="text-align: center; margin-bottom: 25px;">Alsina 41, San Isidro, Buenos Aires, Argentina</h5>
+      <div id="local">
+        <p style="font-weight: bold; text-align: center;">Horarios Local</p>
+        <p style="text-align: center;">Lunes 09 a 19hs <br>
+          Martes 09 a 17hs<br>
+          Miércoles 09 a 19hs<br>
+          Jueves 09 a 17hs<br>
+          Viernes 09 a 19hs<br>
+          Sábado 09 a 14hs
+        </p>
+        <p style="font-weight: bold; text-align: center; margin-top: 40px;">Teléfono</p>
+        <p style="text-align: center;">4747 - 3518</p>
+      </div>
+      <div id="vet">
+        <p style="font-weight: bold; text-align: center;">Veterinaria</p>
+        <p style="text-align: center;">Lunes 10 a 19hs<br>
+          Martes 10 a 17hs<br>
+          Miércoles 10 a 19hs<br>
+          Jueves 10 a 17hs<br>
+          Viernes 10 a 19hs
+        </p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
 
   <!-- Contacto -->
+  <div id="blanco" style="height: 350px;">
+    <form action="" method="post"></form>
+  </div>
 
   <!-- Footer -->
-
-
-  
+  <div id="rosa" style="height: 350px;">
+    <div></div>
+  </div>
 
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
