--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </div>
 
   <!-- Marcas -->
-  <div id="rosa">
+  <div class="rosa">
     <h1>Marcas</h1>
     <div class="row row-cols-2 row-cols-md-6 g-4">
       <div class="col">
@@ -200,7 +200,7 @@
   </div>
 
   <!-- Nosotros -->
-  <div id="blanco">
+  <div class="blanco">
     <h1>Sobre Nosotros</h1>
     <img src="img/Nosotros.jpeg" alt="" id="nosotros"/>
     <p id="nosotros">Somos un PetShop con más de 20 años de experiencia.
@@ -212,11 +212,11 @@
   </div>
 
   <!-- Mapa -->
-  <div id="rosa" class="mapa">
+  <div id="ubi" class="rosa">
     <div id="mapa">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3289.217446074392!2d-58.517987685539076!3d-34.47200765804639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb036b8093c1b%3A0x8d0ed60aa8a25fa6!2sAlsina%2041%2C%20B1642FNA%20San%20Isidro%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1644338983190!5m2!1ses!2sar" style="border:0; align-content: center; display: block; padding: 0 15px;" allowfullscreen="" loading="lazy"></iframe>
     </div>
-    <div id="datos" class="container-fluid">
+    <div id="datos"  class="container-fluid">
       <h1>Visitanos</h1>
       <h5 style="text-align: center; margin-bottom: 25px;">Alsina 41, San Isidro, Buenos Aires, Argentina</h5>
       <div id="local">
@@ -245,13 +245,35 @@
   </div>
 
   <!-- Contacto -->
-  <div id="blanco" style="height: 350px;">
+  <div class="blanco" style="height: 350px;">
     <form action="" method="post"></form>
   </div>
 
   <!-- Footer -->
-  <div id="rosa" style="height: 350px;">
-    <div></div>
+  <div class="rosa" style="padding: 25px;">
+    <div class="logo">
+      <a id="footer" href="#"><img src="img/LogoMascotaManía.png" style="width:150px;height:auto;margin-bottom: 10px;" alt=""></a>
+      <img src="https://img.icons8.com/glyph-neue/36/000000/facebook.png"/>
+      <img src="https://img.icons8.com/windows/36/000000/twitter.png"/>
+      <img src="https://img.icons8.com/ios-glyphs/36/000000/instagram-new.png"/>
+    </div>
+    <div class="seccion">
+      <h3>Mascotas</h3>
+      <p>Perros<br>Gatos<br>Roedores<br>Aves<br>Peces</p>
+    </div>
+    <div class="seccion">
+      <h3>Marcas</h3>
+      <p>Royal Canin<br>Purina<br>Vital Can<br>Eukanuba<br>Old Prince</p>
+    </div>
+    <div class="seccion">
+      <h3>Servicios</h3>
+      <p>Veterinaria<br>Peluquería<br>Farmacia<br>Análisis Clínicos<br>Cirugías</p>
+    </div>
+    <div class="seccion">
+      <h3>Contacto</h3>
+      <p>Atención Telefónica:<br>4747 - 3518<br>Atencion Whatsapp:<br>+54 11 3226 1037</p>
+    </div>
+    <div class="clearfix"></div>
   </div>
 
   <!-- Bootstrap Bundle with Popper -->
