--- a/peces.html
+++ b/peces.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <link rel="stylesheet" href="Styles/style.css">
+  <link rel="stylesheet" href="Styles/styleExtra.css">
   
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -73,186 +73,13 @@
       </nav>
     </div>
     </div>
-    <div id="nav" style="height:120px;">
+    <div id="nav" style="height:189px;">
+      <h3 style="color: whitesmoke; padding-top: 10px;">Peces</h3>
     <div id="imgnav" style="height:180px;"></div> 
   </div>
 
   <!-- Cards -->
-  <div id="cards" class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
-      <div class="card">
-        <img src="img/veterinaria.jpg" class="card-img-top" alt="...">
-        <div id="card">
-          <p id="card">Veterinaria</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="img/petshop.jpg" class="card-img-top" alt="...">
-        <div id="card">
-          <p id="card">PetShop</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="img/peluqueria.jpg" class="card-img-top" alt="...">
-        <div id="card">
-          <p id="card">Peluquería</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Marcas -->
-  <div id="marcas" class="rosa">
-    <h1>Marcas</h1>
-    <div class="row row-cols-2 row-cols-md-6 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/royal.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/purina.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/Eukanuba.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/nature.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/nutrique.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/monami.jfif" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/iams.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/gepsa.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/uniq.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/tcg.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/oldprince.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/krof.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/optimum.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/ferplast.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/golocan.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/drzoo.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/animalpet.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/marcas/per-ros.png" class="card-img-top" alt="...">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Nosotros -->
-  <div id="contacto" class="blanco" style="height: 350px;">
-    <h1>Sobre Nosotros</h1>
-    <img src="img/Nosotros.jpeg" alt="" id="nosotros"/>
-    <p id="nosotros">Somos un PetShop con más de 20 años de experiencia.
-      Desde el inicio, buscamos ofrecerle a nuestros clientes una amplia variedad de productos, contando con los alimentos y accesorios de las mejores marcas y una farmacia destacada.
-      Además, brindamos servicios de peluquería y veterinaria, incluyendo clínica veterinaria, análisis clínicos, aplicación de chips, cirugías, ecografías y electrocardiogramas programados. 
-      ¡Gracias a nuestros clientes de todos estos años por acompañarnos!
-      ¡Te esperamos en Mascotamania Alsina!
-      </p>
-  </div>
-
-  <!-- Mapa -->
-  <div id="ubi" class="rosa">
-    <div id="mapa">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3289.217446074392!2d-58.517987685539076!3d-34.47200765804639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb036b8093c1b%3A0x8d0ed60aa8a25fa6!2sAlsina%2041%2C%20B1642FNA%20San%20Isidro%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1644338983190!5m2!1ses!2sar" style="border:0; align-content: center; display: block; padding: 0 15px;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
-    <div id="datos"  class="container-fluid">
-      <h1>Visitanos</h1>
-      <h5 style="text-align: center; margin-bottom: 25px;">Alsina 41, San Isidro, Buenos Aires, Argentina</h5>
-      <div id="local">
-        <p style="font-weight: bold; text-align: center;">Horarios Local</p>
-        <p style="text-align: center;">Lunes 09 a 19hs <br>
-          Martes 09 a 17hs<br>
-          Miércoles 09 a 19hs<br>
-          Jueves 09 a 17hs<br>
-          Viernes 09 a 19hs<br>
-          Sábado 09 a 14hs
-        </p>
-        <p style="font-weight: bold; text-align: center; margin-top: 40px;">Teléfono</p>
-        <p style="text-align: center;">4747 - 3518</p>
-      </div>
-      <div id="vet">
-        <p style="font-weight: bold; text-align: center;">Veterinaria</p>
-        <p style="text-align: center;">Lunes 10 a 19hs<br>
-          Martes 10 a 17hs<br>
-          Miércoles 10 a 19hs<br>
-          Jueves 10 a 17hs<br>
-          Viernes 10 a 19hs
-        </p>
-      </div>
-      <div class="clearfix"></div>
-    </div>
-  </div>
-
-  <!-- Contacto -->
-  <div class="blanco" style="height: 350px;">
-    <h1>Envianos tu Consulta</h1>
-    <form action="" method="post"></form>
-  </div>
-
+  
   
   <!-- Footer -->
   <div class="rosa" style="padding: 25px;">
