--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item menu" href="/veterinaria.html">Veterinaria</a></li>
                   <li><a class="dropdown-item menu" href="/peluqueria.html">Peluqueria</a></li>
-                  <li><a class="dropdown-item menu" href="/farmacia.html">Farmacia</a></li>
                 </ul>
               </li>
               <li class="nav-item col-3" style="text-align: center;">
@@ -81,26 +80,32 @@
   <div id="cards" class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card">
-        <img src="img/veterinaria.jpg" class="card-img-top" alt="...">
-        <div id="card">
-          <p id="card">Veterinaria</p>
-        </div>
+        <a href="/veterinaria.html" style="text-decoration: none;">
+          <img src="img/veterinaria.jpg" class="card-img-top" alt="...">
+          <div id="card">
+            <p id="card">Veterinaria</p>
+          </div>
+        </a>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="img/petshop.jpg" class="card-img-top" alt="...">
-        <div id="card">
-          <p id="card">PetShop</p>
-        </div>
+        <a href="/mascotas.html" style="text-decoration: none;">
+          <img src="img/petshop.jpg" class="card-img-top" alt="...">
+          <div id="card">
+            <p id="card">PetShop</p>
+          </div>
+        </a>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="img/peluqueria.jpg" class="card-img-top" alt="...">
-        <div id="card">
-          <p id="card">Peluquería</p>
-        </div>
+        <a href="/peluqueria.html" style="text-decoration: none;">
+          <img src="img/peluqueria.jpg" class="card-img-top" alt="...">
+          <div id="card">
+            <p id="card">Peluquería</p>
+          </div>
+        </a>
       </div>
     </div>
   </div>
