--- a/veterinaria.html
+++ b/veterinaria.html
@@ -61,7 +61,6 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item menu" href="/veterinaria.html">Veterinaria</a></li>
                   <li><a class="dropdown-item menu" href="/peluqueria.html">Peluqueria</a></li>
-                  <li><a class="dropdown-item menu" href="/farmacia.html">Farmacia</a></li>
                 </ul>
               </li>
               <li class="nav-item col-3" style="text-align: center;">
@@ -78,8 +77,38 @@
     <div id="imgnav" style="height:180px;"></div> 
   </div>
 
-  <!-- Cards -->
-  
+  <!-- Veterinaria -->
+  <div class="blanco">
+    <img src="img/local1.jpeg" alt="" class="info" />
+    <p class="info" >En Mascotamania Alsina contamos con múltiples servicios pensados para cuidar a tu mascota.<br>Servicios:<br>
+    - Consultorio<br>
+    - Análisis Clínicos<br>
+    - Aplicación de Chips<br>
+    - Cirugías (programadas)<br>
+    - Estudios Cardiológicos (programadas)<br>
+    - Ecografías (programadas)<br>
+    <br>
+    Horario: Lunes, Miércoles y Viernes de 10 a 19hs / Martes y Jueves de 10 a 17hs.<br>
+    <br>
+    Escribimos por WhatsApp o llamanos para solicitar turnos y hacer tus consultas.
+    </p>
+  </div>
+
+  <!-- Farmacia -->
+  <div class="rosa" >
+    <div style="width: 70%;">
+      <h1>Farmacias</h1>
+      <p class="info" style="width: 100%;">
+        En Mascotamania Alsina contamos con una gran variedad de medicamentos para tu mascota. Nuestros veterinarios se encargan de su correcta administración y supervisión.
+      </p>
+    </div>
+    <img src="img/local1.jpeg" alt="" class="info" />
+  </div>
+
+  <!-- Divisor -->
+  <div class="blanco" style="height: 50px;">
+
+  </div>
   
   <!-- Footer -->
   <div class="rosa" style="padding: 25px;">
