--- a/peluqueria.html
+++ b/peluqueria.html
@@ -77,7 +77,16 @@
     <div id="imgnav" style="height:180px;"></div> 
   </div>
 
-  <!-- Cards -->
+  <!-- Peluquería -->
+  <div class="blanco">
+    <img src="img/Peluqueria2.jpeg" alt="" class="info" />
+    <p class="info" >En Mascotamania Alsina consideramos que el cuidado del pelo de tu mascota es una parte esencial para mantenerla saludable.<br>
+    <br>
+    Horario (venir con turno previo): Lunes a Viernes de 9.30 a 15hs. ¡Tenemos 4 turnos por día!<br>
+    <br>  
+    Escribinos por WhatsApp o llamanos para solicitar turnos y hacer tus consultas.
+    </p>
+  </div>
   
   
   <!-- Footer -->
