--- a/veterinaria.html
+++ b/veterinaria.html
@@ -90,7 +90,7 @@
     <br>
     Horario: Lunes, Miércoles y Viernes de 10 a 19hs / Martes y Jueves de 10 a 17hs.<br>
     <br>
-    Escribimos por WhatsApp o llamanos para solicitar turnos y hacer tus consultas.
+    Escribinos por WhatsApp o llamanos para solicitar turnos y hacer tus consultas.
     </p>
   </div>
 
@@ -102,7 +102,7 @@
         En Mascotamania Alsina contamos con una gran variedad de medicamentos para tu mascota. Nuestros veterinarios se encargan de su correcta administración y supervisión.
       </p>
     </div>
-    <img src="img/local1.jpeg" alt="" class="info" />
+    <img src="img/Farmacia.jpeg" alt="" class="info" />
   </div>
 
   <!-- Divisor -->
