--- a/mascotas.html
+++ b/mascotas.html
@@ -78,7 +78,38 @@
   </div>
 
   <!-- Cards -->
-  
+  <div id="cards" class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card">
+        <a href="/veterinaria.html" style="text-decoration: none;">
+          <img src="img/veterinaria.jpg" class="card-img-top" alt="...">
+          <div id="card">
+            <p id="card">Veterinaria</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <a href="/mascotas.html" style="text-decoration: none;">
+          <img src="img/petshop.jpg" class="card-img-top" alt="...">
+          <div id="card">
+            <p id="card">PetShop</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <a href="/peluqueria.html" style="text-decoration: none;">
+          <img src="img/peluqueria.jpg" class="card-img-top" alt="...">
+          <div id="card">
+            <p id="card">Peluquería</p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
   
   <!-- Footer -->
   <div class="rosa" style="padding: 25px;">
